--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,23 +2,29 @@ name: Rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [ * ]
   pull_request:
-    branches: [ master ]
+    branches: [ * ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  compile:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: Build
+      - name: Compile
         run: cargo build --verbose
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Run tests
         run: cargo test --verbose
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Lint
         run: rustup component add clippy && cargo clippy --all-targets --all-features -- -D warnings
