--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-bytes = "*"
+bytes = "1.1.*"
+rand = "0.8.*"
+serde = { version = "1.0.*", features = ["derive"] }
+thiserror = "1.0.*"
