--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "rcon"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "*"
-bytes = "*"
+bytes = "1.1.*"
+rand = "0.8.*"
+serde = { version = "1.0.*", features = ["derive"] }
+thiserror = "1.0.*"
