--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "rcon"
-version = "0.1.1"
+name = "rcon-client"
+version = "0.1.2"
 edition = "2021"
+repository = "https://github.com/donkey-engine/rcon-rs"
+keywords = ["rcon", "protocol", "client"]
+categories = ["network-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
