--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytes = "1.1.*"
+bytes = "^1.1.0"
 rand = "0.8.*"
 serde = { version = "1.0.*", features = ["derive"] }
 thiserror = "1.0.*"
